[tool.poetry]
name = "multi-agent-system"
version = "0.1.0"
description = "A simulation of a system with agents acting towards a common goal"
authors = ["Martin Mokry <martin-kokos@users.noreply.github.com>"]
license = "Copyrighted"
readme = "README.md"
packages = [{include = "multi_agent_system"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
jupyterlab = "^3.6.3"
pandas = "^2.0.1"
jupyterlab-execute-time = "^2.3.1"
bokeh = "^3.1.0"
jupyter-bokeh = "^3.0.7"
tqdm = "^4.65.0"
scipy = "^1.10.1"
boltons = "^23.0.0"
scikit-learn = "^1.2.2"
scikit-optimize = {extras = ["plots"], version = "^0.9.0"}
black = "^23.3.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true
